--- a/data_preprocessing_tools_2023.ipynb
+++ b/data_preprocessing_tools_2023.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9910527d",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e839f04",
+   "metadata": {},
+   "source": [
+    "## Importing the libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1492f2ac",
+   "id": "cc473244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +29,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2903f873",
+   "metadata": {},
+   "source": [
+    "## Importing the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a81e2d61",
+   "id": "0c7d711f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f2543e58",
+   "id": "4193d614",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "47c97d3f",
+   "id": "c464c133",
    "metadata": {},
    "outputs": [
     {
@@ -70,9 +94,316 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d12c81e7",
+   "metadata": {},
+   "source": [
+    "## Taking care of missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "92aff524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "imputer.fit(x[:,1:3])\n",
+    "x[:,1:3] = imputer.transform(x[:,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0bf20739",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 63777.77777777778]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' 38.77777777777778 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a72b5cb",
+   "metadata": {},
+   "source": [
+    "## Encoding categorical data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "013edff3",
+   "metadata": {},
+   "source": [
+    "### Encoding the Independent Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "137a2b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough')\n",
+    "x = np.array(ct.fit_transform(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "99b40c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 0.0 1.0 27.0 48000.0]\n",
+      " [0.0 1.0 0.0 30.0 54000.0]\n",
+      " [0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 0.0 35.0 58000.0]\n",
+      " [0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a7f9718",
+   "metadata": {},
+   "source": [
+    "### Encoding the Dependent Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "04f1e2e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "y = le.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f934872c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b9f4e14",
+   "metadata": {},
+   "source": [
+    "## Splitting the dataset into the Training set and Test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "396dce18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7ad67aba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 0.0 1.0 27.0 48000.0]\n",
+      " [1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 0.0 35.0 58000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f642ec9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 1.0 0.0 30.0 54000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fed70f55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5596232a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f75c3e5",
+   "metadata": {},
+   "source": [
+    "## Feature Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bd4a0c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "x_train[:, 3:] = sc.fit_transform(x_train[:, 3:])\n",
+    "x_test[:, 3:] = sc.transform(x_test[:, 3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4dbc6f41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 0.0 1.0 -0.1915918438457856 -1.0781259408412427]\n",
+      " [0.0 1.0 0.0 -0.014117293757057902 -0.07013167641635401]\n",
+      " [1.0 0.0 0.0 0.5667085065333239 0.6335624327104546]\n",
+      " [0.0 0.0 1.0 -0.3045301939022488 -0.30786617274297895]\n",
+      " [0.0 0.0 1.0 -1.901801144700799 -1.4204636155515822]\n",
+      " [1.0 0.0 0.0 1.1475343068237056 1.2326533634535488]\n",
+      " [0.0 1.0 0.0 1.4379472069688966 1.5749910381638883]\n",
+      " [1.0 0.0 0.0 -0.7401495441200352 -0.5646194287757336]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7d43cdef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 1.0 0.0 30.0 54000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21e663fc",
+   "id": "97d2d345",
    "metadata": {},
    "outputs": [],
    "source": []
